--- a/AG.IO/AG.IO.csproj
+++ b/AG.IO/AG.IO.csproj
@@ -35,8 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AG.Utilities, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\MyProgs\MyMiniTools\ServerHealthService\WebApp\ServerHealthServiceWebApp\packages\AG.Utilities.1.0.0.1\lib\net35\AG.Utilities.dll</HintPath>
+    <Reference Include="AG.Utilities, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\MyProgs\MyMiniTools\ServerHealthService\packages\AG.Utilities.1.0.0.2\lib\net35\AG.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
